{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 38,
  "lineage": "7dbc6ff1-6878-e945-2bf4-10a0f34d1c98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796228037328:route-table/rtb-06f86b627b020ec56",
            "id": "rtb-06f86b627b020ec56",
            "owner_id": "796228037328",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "snapshot-private-rt"
            },
            "tags_all": {
              "Name": "snapshot-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01053fd6ae708cc97"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.snapshot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac629a43efafa4b4",
            "route_table_id": "rtb-06f86b627b020ec56",
            "subnet_id": "subnet-03fbe2fc94155047f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.snapshot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796228037328:security-group/sg-056bb7fc1a7b9c8a2",
            "description": "Allow Lambda outbound access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-056bb7fc1a7b9c8a2",
            "ingress": [],
            "name": "snapshot-cleanup-lambda-sg",
            "name_prefix": "",
            "owner_id": "796228037328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snapshot-cleanup-lambda-sg"
            },
            "tags_all": {
              "Name": "snapshot-cleanup-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01053fd6ae708cc97"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.snapshot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796228037328:subnet/subnet-03fbe2fc94155047f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fbe2fc94155047f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "796228037328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snapshot-private-subnet"
            },
            "tags_all": {
              "Name": "snapshot-private-subnet"
            },
            "vpc_id": "vpc-01053fd6ae708cc97"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.snapshot_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "snapshot_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796228037328:vpc/vpc-01053fd6ae708cc97",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a89929611c12c227",
            "default_route_table_id": "rtb-0fddb06a410180e44",
            "default_security_group_id": "sg-0e6d58d45c01c7ade",
            "dhcp_options_id": "dopt-08eadce8f1f2e2a81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01053fd6ae708cc97",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fddb06a410180e44",
            "owner_id": "796228037328",
            "tags": {
              "Name": "snapshot-cleanup-vpc"
            },
            "tags_all": {
              "Name": "snapshot-cleanup-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:796228037328:vpc-endpoint/vpce-0e59ceeb6f340de2b",
            "dns_entry": [
              {
                "dns_name": "vpce-0e59ceeb6f340de2b-3upmr10y.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e59ceeb6f340de2b-3upmr10y-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0658105DYR3DJ6GPB8"
              },
              {
                "dns_name": "ec2.us-east-1.api.aws",
                "hosted_zone_id": "Z04116833UE9CH0OI2Y83"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e59ceeb6f340de2b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01b2ad8276048d9bd"
            ],
            "owner_id": "796228037328",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-056bb7fc1a7b9c8a2"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.1.145",
                "subnet_id": "subnet-03fbe2fc94155047f"
              }
            ],
            "subnet_ids": [
              "subnet-03fbe2fc94155047f"
            ],
            "tags": {
              "Name": "snapshot-ec2-endpoint"
            },
            "tags_all": {
              "Name": "snapshot-ec2-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01053fd6ae708cc97"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.snapshot_vpc"
          ]
        }
      ]
    }
  ]
}